--- a/client/src/components/Register/Register.css
+++ b/client/src/components/Register/Register.css
@@ -20,12 +20,11 @@ input {
     height: 500px;
   }
   .logo{
-    z-index: 9000;
+    z-index: 1050;
     position: relative;
     display: block;
     max-width: 100%;
     max-height: 100%;
-
   }
   .modal-container {
   position: relative;
